// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs: Component should render correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    key="0"
    style={
      Object {
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "10px",
      }
    }
  >
    <div>
      Item 1
    </div>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "10px",
        }
      }
    >
      &gt;
    </div>
  </div>
  <div
    key="1"
    style={
      Object {
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "10px",
      }
    }
  >
    <div>
      Item 2
    </div>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "10px",
        }
      }
    >
      &gt;
    </div>
  </div>
  <div
    key="2"
    style={
      Object {
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "10px",
      }
    }
  >
    <div>
      Item 3
    </div>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "10px",
        }
      }
    >
      &gt;
    </div>
  </div>
  <div
    key="3"
    style={
      Object {
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "10px",
      }
    }
  >
    <div>
      Item 4
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs: Component should render correctly with a custom symbol 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    key="0"
    style={
      Object {
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "10px",
      }
    }
  >
    <div>
      Item 1
    </div>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "10px",
        }
      }
    >
      /
    </div>
  </div>
  <div
    key="1"
    style={
      Object {
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "10px",
      }
    }
  >
    <div>
      Item 2
    </div>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "10px",
        }
      }
    >
      /
    </div>
  </div>
  <div
    key="2"
    style={
      Object {
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "10px",
      }
    }
  >
    <div>
      Item 3
    </div>
    <div
      style={
        Object {
          "color": "#a6a7aa",
          "marginLeft": "10px",
        }
      }
    >
      /
    </div>
  </div>
  <div
    key="3"
    style={
      Object {
        "color": "#a6a7aa",
        "display": "flex",
        "marginRight": "10px",
      }
    }
  >
    <div>
      Item 4
    </div>
  </div>
</div>
`;
